Prevent images from overflowing

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,1 +1,5 @@
 @import 'ember-paper';
+
+img {
+  max-width: 100%;
+}
